<?xml version="1.0"?>
<package format="3">
  <name>mav_system_msgs</name>
  <version>0.0.0</version>
  <description>
    Messages specific to MAV utils scripts.
  </description>

  <maintainer email="christian.lanegger@mavt.ethz.ch">Christian Lanegger</maintainer>

  <license>TBD</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>

</package>
